[gd_scene load_steps=3 format=3 uid="uid://hud_scene"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hud"]
bg_color = Color(0.1, 0.1, 0.15, 0.8)
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.4, 1)

[node name="HUD" type="CanvasLayer"]
layer = 5
script = ExtResource("1_hud")

[node name="HUDPanel" type="Panel" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_hud")

[node name="HBoxContainer" type="HBoxContainer" parent="HUDPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_right = -20.0
theme_override_constants/separation = 50

[node name="TimeLabel" type="Label" parent="HUDPanel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
text = "Day 1 - Morning"
vertical_alignment = 1

[node name="CoinsLabel" type="Label" parent="HUDPanel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.3, 1)
text = "Coins: 50"
vertical_alignment = 1

[node name="RankLabel" type="Label" parent="HUDPanel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.8, 0.9, 1)
text = "Rank: Initiate"
vertical_alignment = 1

[node name="MissionLabel" type="Label" parent="HUDPanel"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 5.0
offset_right = -20.0
offset_bottom = 35.0
theme_override_colors/font_color = Color(0.9, 0.6, 0.4, 1)
text = "Mission: Chapel Theft"
horizontal_alignment = 2
vertical_alignment = 1
